@@ -8,7 +8,7 @@ Build-Depends:
 Package: contrail-database-common
 Architecture: all
 Maintainer: ijohnson <ijohnson@juniper.net>
-Depends: zookeeper, cassandra (>= 2.2.8)
+Depends: cassandra (>= 2.2.8)
 Replaces: contrail-openstack-database (<< 3.1.0)
 Breaks: contrail-openstack-database (<< 3.1.0)
 Description: Contrail database composite debian package
